# lemcom-cli

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs
src/commands/: crtusr.rs
