[package]
name = "lemcom-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mongodb = "2.8.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "sync"] }
uuid = { version = "1.8.0", features = ["v4"] }